--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: elixir
 elixir:
-  - 1.3.1
+  - 1.3.0
 otp_release:
   - 18.0
 sudo: required
 install:
+  - mix local.rebar --force
   - mix local.hex --force
   - mix deps.get
 env:
